Fix vertical overflow for iPhone X status bar

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,15 @@
   justify-content: space-around;
 }
 
+@media (orientation: portrait) {
+  .header {
+    /* iPhone X: iOS 11.1 */
+    padding-top: constant(safe-area-inset-top);
+    /* iPhone X: iOS 11.2+ */
+    padding-top: env(safe-area-inset-top);
+  }
+}
+
 @media (orientation: landscape) {
   .header,
   .main,
